# ServerEvolution

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  TODO  readme.md  visual.py
apps/00_iterative/: Iterative_server.cc
apps/01_multithread_per_conn/: multithread_server.cc
apps/02_threadpool_blocking/: threadpool_server.cc
apps/03_iomultiplexing/: IO_multiplexing_server.cc
apps/04_reactor/: multi_reactor.cc  reactor_server.cc  single_reactor.cc  single_reactor_multithread.cc
docs/: Reactor设计.md
src/http/: HttpBuilder.h  HttpSession.h
src/http/handlers/: HttpHandlers.h
src/http/parser/: HttpParser.h
web_root/: index.html
